Ass1/initial/src/main/bkool/parser/BKOOLParser.py
# Generated from main/bkool/parser/BKOOL.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class BKOOLParser ( Parser ):

    grammarFileName = "BKOOL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "'boolean'", "'break'", "'class'", 
                     "'continue'", "'do'", "'else'", "'extends'", "'float'", 
                     "'if'", "'int'", "'new'", "'string'", "'then'", "'for'", 
                     "'return'", "'true'", "'false'", "'void'", "'nil'", 
                     "'this'", "'final'", "'static'", "'to'", "'downto'", 
                     "'+'", "'-'", "'*'", "'/'", "'\\'", "'%'", "'!='", 
                     "'=='", "'<'", "'>'", "'<='", "'>='", "'||'", "'&&'", 
                     "'!'", "'^'", "':='", "'='", "'['", "']'", "'{'", "'}'", 
                     "'('", "')'", "';'", "':'", "'.'", "','" ]

    symbolicNames = [ "<INVALID>", "BOOLLIT", "BOOLEAN", "BREAK", "CLASS", 
                      "CONTINUE", "DO", "ELSE", "EXTENDS", "FLOAT", "IF", 
                      "INT", "NEW", "STRING", "THEN", "FOR", "RETURN", "TRUE", 
                      "FALSE", "VOID", "NIL", "THIS", "FINAL", "STATIC", 
                      "TO", "DOWNTO", "ADD", "SUB", "MUL", "FLOATDIV", "INTDIV", 
                      "MOD", "NOTEQ", "EQ", "LESS", "GREATER", "LESSEQ", 
                      "GREATEREQ", "OR", "AND", "NOT", "CONCAT", "ASSIGN", 
                      "OP_BANG", "LSB", "RSB", "LP", "RP", "LB", "RB", "SEMICOLONE", 
                      "COLON", "DOT", "COMMA", "INTEGERLIT", "FLOATLIT", 
                      "STRINGLIT", "WS", "BLOCKCOMMENT", "LINECOMMENT", 
                      "ID", "ERROR_CHAR", "UNCLOSE_STRING", "ILLEGAL_ESCAPE" ]

    RULE_program = 0
    RULE_class_decl = 1
    RULE_list_of_members = 2
    RULE_attribute = 3
    RULE_constant_decl = 4
    RULE_variable_decl = 5
    RULE_id_list = 6
    RULE_method = 7
    RULE_list_of_para = 8
    RULE_para = 9
    RULE_type_lit = 10
    RULE_primitive_type = 11
    RULE_array_type = 12
    RULE_class_type = 13
    RULE_exp = 14
    RULE_exp1 = 15
    RULE_exp2 = 16
    RULE_exp3 = 17
    RULE_exp4 = 18
    RULE_exp5 = 19
    RULE_exp6 = 20
    RULE_exp7 = 21
    RULE_exp8 = 22
    RULE_exp9 = 23
    RULE_exp10 = 24
    RULE_exp11 = 25
    RULE_literals = 26
    RULE_index_exp = 27
    RULE_member_access = 28
    RULE_instance_attribute = 29
    RULE_static_attribute = 30
    RULE_object_creation = 31
    RULE_statement = 32
    RULE_match_state = 33
    RULE_unmatch_state = 34
    RULE_other_state = 35
    RULE_block_state = 36
    RULE_assign_state = 37
    RULE_lhs = 38
    RULE_local_variable = 39
    RULE_for_state = 40
    RULE_scalar_variable = 41
    RULE_break_state = 42
    RULE_continue_state = 43
    RULE_return_state = 44
    RULE_method_invo_state = 45
    RULE_instance_method = 46
    RULE_static_method = 47
    RULE_list_exp = 48

    ruleNames =  [ "program", "class_decl", "list_of_members", "attribute", 
                   "constant_decl", "variable_decl", "id_list", "method", 
                   "list_of_para", "para", "type_lit", "primitive_type", 
                   "array_type", "class_type", "exp", "exp1", "exp2", "exp3", 
                   "exp4", "exp5", "exp6", "exp7", "exp8", "exp9", "exp10", 
                   "exp11", "literals", "index_exp", "member_access", "instance_attribute", 
                   "static_attribute", "object_creation", "statement", "match_state", 
                   "unmatch_state", "other_state", "block_state", "assign_state", 
                   "lhs", "local_variable", "for_state", "scalar_variable", 
                   "break_state", "continue_state", "return_state", "method_invo_state", 
                   "instance_method", "static_method", "list_exp" ]

    EOF = Token.EOF
    BOOLLIT=1
    BOOLEAN=2
    BREAK=3
    CLASS=4
    CONTINUE=5
    DO=6
    ELSE=7
    EXTENDS=8
    FLOAT=9
    IF=10
    INT=11
    NEW=12
    STRING=13
    THEN=14
    FOR=15
    RETURN=16
    TRUE=17
    FALSE=18
    VOID=19
    NIL=20
    THIS=21
    FINAL=22
    STATIC=23
    TO=24
    DOWNTO=25
    ADD=26
    SUB=27
    MUL=28
    FLOATDIV=29
    INTDIV=30
    MOD=31
    NOTEQ=32
    EQ=33
    LESS=34
    GREATER=35
    LESSEQ=36
    GREATEREQ=37
    OR=38
    AND=39
    NOT=40
    CONCAT=41
    ASSIGN=42
    OP_BANG=43
    LSB=44
    RSB=45
    LP=46
    RP=47
    LB=48
    RB=49
    SEMICOLONE=50
    COLON=51
    DOT=52
    COMMA=53
    INTEGERLIT=54
    FLOATLIT=55
    STRINGLIT=56
    WS=57
    BLOCKCOMMENT=58
    LINECOMMENT=59
    ID=60
    ERROR_CHAR=61
    UNCLOSE_STRING=62
    ILLEGAL_ESCAPE=63

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(BKOOLParser.EOF, 0)

        def class_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKOOLParser.Class_declContext)
            else:
                return self.getTypedRuleContext(BKOOLParser.Class_declContext,i)


        def getRuleIndex(self):
            return BKOOLParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = BKOOLParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 98
                self.class_decl()
                self.state = 101 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==BKOOLParser.CLASS):
                    break

            self.state = 103
            self.match(BKOOLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(BKOOLParser.CLASS, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(BKOOLParser.ID)
            else:
                return self.getToken(BKOOLParser.ID, i)

        def LP(self):
            return self.getToken(BKOOLParser.LP, 0)

        def RP(self):
            return self.getToken(BKOOLParser.RP, 0)

        def EXTENDS(self):
            return self.getToken(BKOOLParser.EXTENDS, 0)

        def list_of_members(self):
            return self.getTypedRuleContext(BKOOLParser.List_of_membersContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_class_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClass_decl" ):
                return visitor.visitClass_decl(self)
            else:
                return visitor.visitChildren(self)




    def class_decl(self):

        localctx = BKOOLParser.Class_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_class_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.match(BKOOLParser.CLASS)
            self.state = 106
            self.match(BKOOLParser.ID)
            self.state = 109
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKOOLParser.EXTENDS:
                self.state = 107
                self.match(BKOOLParser.EXTENDS)
                self.state = 108
                self.match(BKOOLParser.ID)


            self.state = 111
            self.match(BKOOLParser.LP)
            self.state = 113
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BKOOLParser.BOOLEAN) | (1 << BKOOLParser.FLOAT) | (1 << BKOOLParser.INT) | (1 << BKOOLParser.STRING) | (1 << BKOOLParser.VOID) | (1 << BKOOLParser.NIL) | (1 << BKOOLParser.FINAL) | (1 << BKOOLParser.STATIC) | (1 << BKOOLParser.ID))) != 0):
                self.state = 112
                self.list_of_members()


            self.state = 115
            self.match(BKOOLParser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class List_of_membersContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attribute(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKOOLParser.AttributeContext)
            else:
                return self.getTypedRuleContext(BKOOLParser.AttributeContext,i)


        def method(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKOOLParser.MethodContext)
            else:
                return self.getTypedRuleContext(BKOOLParser.MethodContext,i)


        def getRuleIndex(self):
            return BKOOLParser.RULE_list_of_members

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitList_of_members" ):
                return visitor.visitList_of_members(self)
            else:
                return visitor.visitChildren(self)




    def list_of_members(self):

        localctx = BKOOLParser.List_of_membersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_list_of_members)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 119
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
                if la_ == 1:
                    self.state = 117
                    self.attribute()
                    pass

                elif la_ == 2:
                    self.state = 118
                    self.method()
                    pass


                self.state = 121 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BKOOLParser.BOOLEAN) | (1 << BKOOLParser.FLOAT) | (1 << BKOOLParser.INT) | (1 << BKOOLParser.STRING) | (1 << BKOOLParser.VOID) | (1 << BKOOLParser.NIL) | (1 << BKOOLParser.FINAL) | (1 << BKOOLParser.STATIC) | (1 << BKOOLParser.ID))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttributeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable_decl(self):
            return self.getTypedRuleContext(BKOOLParser.Variable_declContext,0)


        def constant_decl(self):
            return self.getTypedRuleContext(BKOOLParser.Constant_declContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_attribute

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttribute" ):
                return visitor.visitAttribute(self)
            else:
                return visitor.visitChildren(self)




    def attribute(self):

        localctx = BKOOLParser.AttributeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_attribute)
        try:
            self.state = 125
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 123
                self.variable_decl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 124
                self.constant_decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Constant_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FINAL(self):
            return self.getToken(BKOOLParser.FINAL, 0)

        def type_lit(self):
            return self.getTypedRuleContext(BKOOLParser.Type_litContext,0)


        def ID(self):
            return self.getToken(BKOOLParser.ID, 0)

        def OP_BANG(self):
            return self.getToken(BKOOLParser.OP_BANG, 0)

        def exp(self):
            return self.getTypedRuleContext(BKOOLParser.ExpContext,0)


        def SEMICOLONE(self):
            return self.getToken(BKOOLParser.SEMICOLONE, 0)

        def STATIC(self):
            return self.getToken(BKOOLParser.STATIC, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_constant_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstant_decl" ):
                return visitor.visitConstant_decl(self)
            else:
                return visitor.visitChildren(self)




    def constant_decl(self):

        localctx = BKOOLParser.Constant_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_constant_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKOOLParser.STATIC:
                self.state = 127
                self.match(BKOOLParser.STATIC)


            self.state = 130
            self.match(BKOOLParser.FINAL)
            self.state = 131
            self.type_lit()
            self.state = 132
            self.match(BKOOLParser.ID)
            self.state = 133
            self.match(BKOOLParser.OP_BANG)
            self.state = 134
            self.exp()
            self.state = 135
            self.match(BKOOLParser.SEMICOLONE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Variable_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id_list(self):
            return self.getTypedRuleContext(BKOOLParser.Id_listContext,0)


        def COLON(self):
            return self.getToken(BKOOLParser.COLON, 0)

        def type_lit(self):
            return self.getTypedRuleContext(BKOOLParser.Type_litContext,0)


        def SEMICOLONE(self):
            return self.getToken(BKOOLParser.SEMICOLONE, 0)

        def STATIC(self):
            return self.getToken(BKOOLParser.STATIC, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_variable_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariable_decl" ):
                return visitor.visitVariable_decl(self)
            else:
                return visitor.visitChildren(self)




    def variable_decl(self):

        localctx = BKOOLParser.Variable_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_variable_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKOOLParser.STATIC:
                self.state = 137
                self.match(BKOOLParser.STATIC)


            self.state = 140
            self.id_list()
            self.state = 141
            self.match(BKOOLParser.COLON)
            self.state = 142
            self.type_lit()
            self.state = 143
            self.match(BKOOLParser.SEMICOLONE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Id_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(BKOOLParser.ID)
            else:
                return self.getToken(BKOOLParser.ID, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BKOOLParser.COMMA)
            else:
                return self.getToken(BKOOLParser.COMMA, i)

        def getRuleIndex(self):
            return BKOOLParser.RULE_id_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitId_list" ):
                return visitor.visitId_list(self)
            else:
                return visitor.visitChildren(self)




    def id_list(self):

        localctx = BKOOLParser.Id_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_id_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self.match(BKOOLParser.ID)
            self.state = 150
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKOOLParser.COMMA:
                self.state = 146
                self.match(BKOOLParser.COMMA)
                self.state = 147
                self.match(BKOOLParser.ID)
                self.state = 152
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKOOLParser.ID, 0)

        def LB(self):
            return self.getToken(BKOOLParser.LB, 0)

        def RB(self):
            return self.getToken(BKOOLParser.RB, 0)

        def block_state(self):
            return self.getTypedRuleContext(BKOOLParser.Block_stateContext,0)


        def type_lit(self):
            return self.getTypedRuleContext(BKOOLParser.Type_litContext,0)


        def VOID(self):
            return self.getToken(BKOOLParser.VOID, 0)

        def STATIC(self):
            return self.getToken(BKOOLParser.STATIC, 0)

        def list_of_para(self):
            return self.getTypedRuleContext(BKOOLParser.List_of_paraContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_method

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethod" ):
                return visitor.visitMethod(self)
            else:
                return visitor.visitChildren(self)




    def method(self):

        localctx = BKOOLParser.MethodContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_method)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.state = 153
                self.type_lit()

            elif la_ == 2:
                self.state = 154
                self.match(BKOOLParser.VOID)


            self.state = 158
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKOOLParser.STATIC:
                self.state = 157
                self.match(BKOOLParser.STATIC)


            self.state = 160
            self.match(BKOOLParser.ID)
            self.state = 161
            self.match(BKOOLParser.LB)
            self.state = 163
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKOOLParser.ID:
                self.state = 162
                self.list_of_para()


            self.state = 165
            self.match(BKOOLParser.RB)
            self.state = 166
            self.block_state()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class List_of_paraContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def para(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKOOLParser.ParaContext)
            else:
                return self.getTypedRuleContext(BKOOLParser.ParaContext,i)


        def SEMICOLONE(self, i:int=None):
            if i is None:
                return self.getTokens(BKOOLParser.SEMICOLONE)
            else:
                return self.getToken(BKOOLParser.SEMICOLONE, i)

        def getRuleIndex(self):
            return BKOOLParser.RULE_list_of_para

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitList_of_para" ):
                return visitor.visitList_of_para(self)
            else:
                return visitor.visitChildren(self)




    def list_of_para(self):

        localctx = BKOOLParser.List_of_paraContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_list_of_para)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 168
            self.para()
            self.state = 173
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKOOLParser.SEMICOLONE:
                self.state = 169
                self.match(BKOOLParser.SEMICOLONE)
                self.state = 170
                self.para()
                self.state = 175
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id_list(self):
            return self.getTypedRuleContext(BKOOLParser.Id_listContext,0)


        def COLON(self):
            return self.getToken(BKOOLParser.COLON, 0)

        def type_lit(self):
            return self.getTypedRuleContext(BKOOLParser.Type_litContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_para

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPara" ):
                return visitor.visitPara(self)
            else:
                return visitor.visitChildren(self)




    def para(self):

        localctx = BKOOLParser.ParaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_para)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 176
            self.id_list()
            self.state = 177
            self.match(BKOOLParser.COLON)
            self.state = 178
            self.type_lit()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Type_litContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primitive_type(self):
            return self.getTypedRuleContext(BKOOLParser.Primitive_typeContext,0)


        def array_type(self):
            return self.getTypedRuleContext(BKOOLParser.Array_typeContext,0)


        def class_type(self):
            return self.getTypedRuleContext(BKOOLParser.Class_typeContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_type_lit

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType_lit" ):
                return visitor.visitType_lit(self)
            else:
                return visitor.visitChildren(self)




    def type_lit(self):

        localctx = BKOOLParser.Type_litContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_type_lit)
        try:
            self.state = 183
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 180
                self.primitive_type()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 181
                self.array_type()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 182
                self.class_type()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Primitive_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(BKOOLParser.INT, 0)

        def FLOAT(self):
            return self.getToken(BKOOLParser.FLOAT, 0)

        def BOOLEAN(self):
            return self.getToken(BKOOLParser.BOOLEAN, 0)

        def STRING(self):
            return self.getToken(BKOOLParser.STRING, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_primitive_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrimitive_type" ):
                return visitor.visitPrimitive_type(self)
            else:
                return visitor.visitChildren(self)




    def primitive_type(self):

        localctx = BKOOLParser.Primitive_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_primitive_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 185
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BKOOLParser.BOOLEAN) | (1 << BKOOLParser.FLOAT) | (1 << BKOOLParser.INT) | (1 << BKOOLParser.STRING))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_typeContext(ParserRuleContext):
